<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            
            <TextView
            android:id="@+id/protectionCount"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#33B5E5"
            android:paddingBottom="10sp"
            android:paddingLeft="10sp"
            android:paddingTop="5sp"
            android:text="@string/protection_goals"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
        <Button 
            android:id="@+id/btnShowProtections"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="#33B5E5"
            android:text="Alle Schutzziele"
            android:textColor="@android:color/black"/>
            
        </LinearLayout>
        
        <EditText
            android:id="@+id/protection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/protection_goal"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        
        <TextView
            android:id="@+id/actionCount"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#33B5E5"
            android:paddingBottom="10sp"
            android:paddingLeft="10sp"
            android:paddingTop="5sp"
            android:text="@string/protection_actions"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1" />
        
        <Button 
            android:id="@+id/btnShowActions"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="#33B5E5"
            android:text="Alle Maßnahmen"
            android:textColor="@android:color/black"/>

        </LinearLayout>
        
        <EditText
            android:id="@+id/action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/protection_action"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <AutoCompleteTextView
                android:id="@+id/actionResponsible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/protection_responsible" >
            </AutoCompleteTextView>

            <TextView
                android:id="@+id/actionAppointment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/protection_appointment" />
            
            <ImageButton 
                android:id="@+id/actionAppointmentButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/calendar"
                android:contentDescription="@string/image"
                android:layout_marginBottom="7sp"
                android:layout_marginRight="10sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>