<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:background="#222222">
    
	<TextView 
	    android:id="@+id/DangerWorkplaceName"
	    android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="44sp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="#222222"/>
    
    <Button
        android:id="@+id/DangerDescriptionButton"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="12sp"
        android:text="@string/danger_description_button"
        android:textColor="#FFFFFF"
        android:background="#222222"/>
    
    <Button
        android:id="@+id/DangerRiskButton"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="12sp"
        android:text="@string/danger_risk_description_button"
        android:textColor="#FFFFFF"
        android:background="#222222"/>
    
    <Button
        android:id="@+id/DangerProtectionButton"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="12sp"
        android:text="@string/danger_protection_button"
        android:textColor="#FFFFFF"
        android:background="#222222"/>
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#33B5E5"
        android:layout_weight="1"/>
    
    <!-- 33B5E5 -->
</LinearLayout>
