<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

     <TextView 
	        android:id="@+id/companyNameEdit"
	        android:textSize="25sp"
	        android:textStyle="bold"
	        android:textColor="@android:color/white"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#0099CC"
	        android:layout_marginLeft="5sp"
	        android:layout_marginRight="5sp"
	        android:layout_marginTop="5sp"
	        android:paddingTop="20sp"
	    	android:paddingBottom="20sp"
	    	android:paddingLeft="10sp"/>
     
     
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/border"
	    android:layout_marginLeft="5sp"
	    android:layout_marginRight="5sp" >
	    
	    <TextView 
	        android:text="@string/workplace_definition"
	        android:textSize="20sp"
	        android:textColor="@android:color/white"
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:background="#33B5E5"
	        android:paddingTop="5sp"
	    	android:paddingBottom="10sp"
	    	android:paddingLeft="10sp"/>
  
	
        
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false">
	    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        >
	        
	        <EditText 
	            android:id="@+id/WorkplaceName"
	            android:text="@string/workplace_name"
	            
	            android:inputType="text"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        >
	        
	        <EditText 
	            android:id="@+id/WorkplaceNameCompany"
	            android:text="@string/workplace_name_in_company"
	            
	            android:inputType="text"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"/>
	        
	    </LinearLayout>
	    
	</LinearLayout>
	
	<EditText 
	    android:id="@+id/WorkplaceDescribtion"
	    android:text="@string/workplace_description"
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|top"
		android:inputType="textMultiLine">
 
      	<requestFocus />
	</EditText>  
	
	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            
            <EditText
                android:id="@+id/ActivityNameEdit"
                android:layout_width="wrap_content"
                android:layout_weight="15"
                android:layout_height="match_parent"
                android:hint="Tätigkeit" />
            
            <Button 
                android:id="@+id/AddActivityEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+"/>

        </LinearLayout>
        
        <ListView 
            android:id="@+id/ActivityListEdit"
            android:layout_width="match_parent"
            android:layout_height="50px"/>
	
	<TextView 
	    android:id="@+id/SurveytypeSelected"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5sp"
	    android:layout_marginBottom="5sp"/>
	    
	</LinearLayout>
	
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/border"
	    android:layout_marginTop="5sp"
	    android:layout_marginLeft="5sp"
	    android:layout_marginRight="5sp"
	    android:layout_marginBottom="5sp">
	
	
	<TextView 
	    android:text="@string/possible_dangers"
	    android:textColor="@android:color/white"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#33B5E5"
	    android:paddingTop="10sp"
	    android:paddingBottom="10sp"
	    android:paddingLeft="10sp"/>
	
	<ListView 
	    android:id="@+id/TestList2"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"/>
	

	</LinearLayout>
	
<!-- 	
	<Button 
	    android:id="@+id/WorkplaceButton"
	    android:text="@string/alter"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/> -->
	
	
</LinearLayout>
